# projects

./: .gitignore
ai-meal-planner/: .env.example  .gitignore  Makefile  README.md  SETUP.md  TESTING.md  pyproject.toml
ai-meal-planner/backend/: .env.example  main.py
ai-meal-planner/backend/agents/: __init__.py  coordinator_agent.py  meal_planner_agent.py  price_analyzer_agent.py  store_selector_agent.py
ai-meal-planner/backend/api/: routes.py  schemas.py
ai-meal-planner/backend/config/: settings.py
ai-meal-planner/backend/templates/: index.html
ai-meal-planner/backend/tests/: test_api.py
ai-meal-planner/backend/tools/: __init__.py  meal_generation.py  price_analysis.py
ai-meal-planner/design/Components/party/: ChatInput  ChatMessage  IngredientsCard  MenuCard  QuickPrompts  RecipeCarousel  StoreProductsCard
ai-meal-planner/design/Pages/: Home
ai-meal-planner/docs/: API_INTEGRATION.md  INTEGRATION_GUIDE.md  PROJECT_STRUCTURE_REVIEW.md
ai-meal-planner/extension/: tsconfig.json
ai-meal-planner/extension/src/: background.ts  content_script.ts  popup.ts
ai-meal-planner/extension/src/content/: dom-helpers.ts
ai-meal-planner/extension/src/public/: manifest.json  popup.html
ai-meal-planner/extension/src/services/: api_client.ts  price_checker.ts
ai-meal-planner/extension/src/shared/: constants.ts  ingredient-parser.ts  logger.ts  product-matcher.ts  types.ts
ai-meal-planner/extension/src/stores/: barbora_store.ts  base_store.ts  iki_store.ts  index.ts  maxima_store.ts  rimi_store.ts
ai-meal-planner/frontend/: README.md  index.html
ai-meal-planner/frontend/react/: README.md  index.html  package-lock.json  package.json  vite.config.js
ai-meal-planner/frontend/react/src/: App.jsx
ai-meal-planner/frontend/react/src/api/: client.js
ai-meal-planner/frontend/react/src/components/: ChatInput.jsx  IngredientsCard.jsx  MealsList.jsx  MenuCard.jsx  QuickPrompts.jsx  RecipeCarousel.jsx  TabNavigation.jsx
ai-meal-planner/frontend/react/src/utils/: ingredientUtils.js
ai-meal-planner/scripts/: test-all.sh
ai_planner/scripts/: README.md  clean.sh  setup.sh
cart-genie/: .gitignore
cart-genie copy 2/extension/: package.json
cart-genie copy 6/extension/: webpack.config.js
cart-genie copy 7/webapp/: app.py
recipe_suggestor/: Untitled.ipynb  index.html  main.py
(+45 files in other folders)
